--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -17,14 +17,14 @@ scrape_configs:
   - job_name: 'blackbox'
     metrics_path: /probe
     params:
-      module: [http_prometheus]
+      module: [http_2xx]
     static_configs:
       - targets:
-          - https://lms.skillfactory.ru    # Target to probe with https.
+        - https://lms.skillfactory.ru
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: 127.0.0.1:9115  # The blackbox exporter's real hostname:port.
+        replacement: black-exporter:9115
